@@ -331,6 +331,11 @@ focus to first item when selecting a project.
 keep focus on project after refresh.
 </p>
 </li>
+<li>
+<p>
+keep focus on task after refresh.
+</p>
+</li>
 </ul></div>
 </div>
 </div>
@@ -476,7 +481,7 @@ Initial release.
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-12-02 12:23:12 CET
+Last updated 2013-12-03 08:48:03 CET
 </div>
 </div>
 </body>
