@@ -6,6 +6,7 @@ v0.0.5
 
  * focus to first item when selecting a project.
  * keep focus on project after refresh.
+ * keep focus on task after refresh.
 
 v0.0.4
 ------
